# kizami

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.txt
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  state.rs
crates/api/src/routes/: blocks.rs  chains.rs  mod.rs  status.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/migrate/: Cargo.toml
crates/migrate/src/: lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: chains.rs  db.rs  error.rs  lib.rs  models.rs  sqd.rs  storage.rs
migrations/: 20260223_initial.sql
static/: index.html
