[package]
name = "kizami-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kizami-api"
path = "src/main.rs"

[dependencies]
kizami-shared = { path = "../shared" }
kizami-ingestion = { path = "../ingestion" }
kizami-migrate = { path = "../migrate" }
axum = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
