[package]
name = "kizami-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
kizami-shared = { path = "../shared" }
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
