[package]
name = "kizami-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras"] }
